<resources>
    <string name="app_name">preggycare</string>
    <string name="hello_welcome">Welcome to </string>
    <string name="line1">We ensure your health and wellness</string>
    <string name="pregnancy_companion">Pregnancy companion</string>
    <string name="line2">Provides you the ultimate resource for tips ,health info and support</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Manager">Are you Manager</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="preggycare">PreggyCare</string>
    <string name="get_started">Get started</string>
    <string name="personal_info">Personal Info</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="preg_info">Pregnancy details</string>
    <string name="gestational_age">Gestational Age</string>
    <string name="Babies_born">Already Baby born</string>
    <string name="health_info">Health Info</string>
    <string name="profile">Profile</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="cal">cal</string>
    <string name="faq">faq</string>
    <string name="health_authority_for_pregnancy">National Health Authority for Pregnancy</string>
    <string name="month_one">Month 1</string>
    <string name="month_two">Month 2</string>
    <string name="month_three">Month 3</string>
    <string name="month_four">Month 4</string>
    <string name="month_five">Month 5</string>
    <string name="month_six">Month 6</string>
    <string name="month_seven">Month 7</string>
    <string name="month_eight">Month 8</string>
    <string name="month_nine">Month 9</string>
    <string name="aadharnumber">Aadhaar Number</string>
    <string name="hospitalinfo">Hospital Info</string>
    <string name="doctorname">Enter Doctor Name </string>
    <string name="Admitdate">Admit Date</string>
    <string name="Dischargedate">Discharge Date</string>
    <string name="serviceseeker">Service seeker</string>
    <string name="month_1">Month - 1</string>
    <string name="foods">Foods</string>
    <string name="fooddata">A nutritious diet in the first month provides essential nutrients for early embryonic growth and supports the development of the baby organs and tissues.</string>
    <string name="breakfast">Breakfast</string>
    <string name="fruits">Fruits</string>
    <string name="Apples">Apples</string>
    <string name="Avocodas">Avocodas</string>
    <string name="Oranges">Oranges</string>
    <string name="dairy">Dairy</string>
    <string name="Yogurt">Yogurt</string>
    <string name="Soya_Milk">SoyaMilk</string>
    <string name="Lunch">Lunch</string>
    <string name="excercisedata">Exercise during this early stage can help maintain overall fitness, promote healthy blood circulation, and support your physical and mental well-being. It also eases the constipation.</string>
    <string name="exercise">Exercises</string>
    <string name="spinach">Spinach</string>
    <string name="Soyabeans">Soyabeans</string>
    <string name="minerals">Minerals</string>
    <string name="Mushrooms">MUshrooms</string>
    <string name="Eggs">Eggs</string>
    <string name="Vitamins">Vitamins</string>
    <string name="Dinner">Dinner</string>
    <string name="Beans">Beans</string>
    <string name="fish">Fish</string>
    <string name="Minerals">Minerals</string>
    <string name="Potato">Potato</string>
    <string name="Cabbage">Cabbage</string>
    <string name="Vegetables">Vegetables</string>
    <string name="Walking">Walking</string>
    <string name="walkingdata">Walking is a low-impact exercise that can be done throughout pregnancy. It helps improve cardiovascular health, maintain muscle tone.</string>
    <string name="Swimming">Swimming</string>
    <string name="Swimmingdata">Swimming provides a low-impact, full-body workout. The water supports your body, relieving pressure on your joints, and helps you stay cool.</string>
    <string name="sleeping">Sleeping</string>
    <string name="tip">Tip</string>
    <string name="tipdata">“Avoid stress and emotional strain”</string>
    <string name="Sleepingdata">Any comfortable position is suitable during the first month. You can sleep on your back, stomach, or side, depending on your preference</string>
    <string name="measurements">Baby Measurements</string>
    <string name="size">Size  -  size of poppy seed</string>
    <string name="length">Length -  about 2mm</string>
    <string name="weight">Weight - (~)</string>
    <string name="month_2">Month - 2</string>
    <string name="month_3">Month - 3</string>
    <string name="month_4">Month - 4</string>
    <string name="month_5">Month - 5</string>
    <string name="month_6">Month - 6</string>
    <string name="month_7">Month - 7</string>
    <string name="month_8">Month - 8</string>
    <string name="month_9">Month - 9</string>
    <string name="size2">Size: Size of raspberry</string>
    <string name="length2">Length  -   0.5 to 1 inches</string>
    <string name="weight2">Weight  -  1.0 to 1.3 grams </string>
    <string name="fooddata2">Consuming foods high in folate during the second month helps prevent neural tube defects and supports the healthy development of the baby\'s brain and spinal cord.</string>
    <string name="radish">Radish</string>
    <string name="beetroot">Beetroot</string>
    <string name="ggram">Green Gram</string>
    <string name="kBeans">Kidney Beans</string>
    <string name="chickpeas">Chick peas</string>
    <string name="cauliflower">Cauli flower</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="curd">Curd</string>
    <string name="almondMilk">Almond Milk</string>
    <string name="Dates">Dates</string>
    <string name="grapes">Grapes</string>
    <string name="pears">Pears</string>
    <string name="excercisedata2">Engaging in appropriate exercises during pregnancy can help prepare the body for labor and childbirth, improving stamina and muscle tone.</string>
    <string name="Stationarybicycling">Stationary bicycling</string>
    <string name="stationarydata">Stationary bicycling is a calorie-burning exercise that helps burn excess calories, which may aid in maintaining a healthy weight or managing weight gain.</string>
    <string name="Pelvic_floor">Pelvic floor exercises</string>
    <string name="pelvicdata">Pelvic floor exercises help strengthen the muscles, which can improve their ability to support the pelvic organs and reduce the risk of issues such as urinary incontinence</string>
    <string name="Sleepingdata2">You can still sleep on your back, but it is a good time to start transitioning to side sleeping.</string>
    <string name="tipdata2">Keep observing your weight daily.</string>
    <string name="size3">Size: Size of lime</string>
    <string name="weight3">Weight: 14 to 28 grams</string>
    <string name="length3">Length: 2.5 to 3.5 inches</string>
    <string name="fooddata3">Including probiotic-rich foods during the third month promotes a healthy gut microbiome, benefiting both the mothers digestive health and the baby immune system.</string>
    <string name="almonds">Almonds</string>
    <string name="flaxseeds">Flaxseeds</string>
    <string name="walnuts">Walnuts</string>
    <string name="almond_Milk">Almond Milk</string>
    <string name="chicken">Chicken</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="raisins">Raisins</string>
    <string name="bread">Bread</string>
    <string name="cucumber">Cucumber</string>
    <string name="sweetpotato">Sweetpotato</string>
    <string name="excercisedata3">Engaging in low-impact exercises can help reduce joint strain and swelling, and improve circulation to the placenta, delivering more oxygen and nutrients to the baby..</string>
    <string name="kegel">Kegel Exercises    </string>
    <string name="kegeldata">Kegel exercises specifically target the pelvic floor muscles, which can undergo stress and strain during pregnancy and childbirth</string>
    <string name="stationarybicycling">Stationary bicycling </string>
    <string name="stationarybicyclingdata">It is a low-impact cardiovascular exercise. It increases your heart rate, promoting blood circulation and oxygen supply throughout your body</string>
    <string name="Sleepingdata3">Sleeping on your left side is recommended. This position improves blood circulation to the baby and prevents pressure on major blood vessels</string>
    <string name="tipdata3">Wear comfortable clothing</string>
    <string name="diaphragmaticbreathingdata">Diaphragmatic breathing helps to activate the relaxation response, reduce stress, and increase oxygen supply to your body and the baby</string>
    <string name="diaphragmaticbreathing">Diaphragmatic breathing </string>
    <string name="Sleepingdata4">Continue sleeping on your left side, which allows for optimal blood flow and nutrient delivery to the placenta.</string>
    <string name="tipdata4">Avoid heavy lifting</string>
    <string name="pseeds">pumpkin seeds</string>
    <string name="sprouts">Sprouts</string>
    <string name="pepper">Bell pepper</string>
    <string name="parsely">Parsely</string>
    <string name="brinjal">Brinjal</string>
    <string name="mangoes">Mangoes</string>
    <string name="guava">Guava</string>
    <string name="fooddata4">A well-balanced diet in the fourth month aids in the production of breast milk, ensuring a good supply of nutrients for the newborn after birth.</string>
    <string name="size4">Size: Size of avocado</string>
    <string name="length4">Length: 5.5 to 6 inches</string>
    <string name="weight4">Weight: 70 to 100 grams</string>
    <string name="fooddata5">Zinc-rich foods consumed during the fifth month support the baby\'s cell growth and immune system development, promoting overall health and well-being.</string>
    <string name="weight5">Weight: 300 to 330 grams</string>
    <string name="length5">Length: 10 to 12 inches</string>
    <string name="size5">Size: Size of banana</string>
    <string name="lentils">Lentils</string>
    <string name="oatmeal">Oatmeal</string>
    <string name="excercisedata5">Exercise can improve body awareness and promote better posture and alignment as the body undergoes changes during pregnancy.</string>
    <string name="Sleepingdata5">Sleep on your left side and use a pillow between your knees for added comfort and to alleviate pressure on your hips.</string>
    <string name="tipdata5">Start communicating with the baby</string>
    <string name="panner">Panner</string>
    <string name="ridgegaurd">Ridge Guard</string>
    <string name="banana">Banana</string>
    <string name="size6">Size: Size of a small pineapple</string>
    <string name="length6">Length: 11 to 14 inches</string>
    <string name="weight6">Weight: 600 to 800 grams</string>
    <string name="fooddata6">Foods rich in antioxidants, such as berries and colorful Vegetables, provide protection against oxidative stress, supporting the mother\'s health and the baby\'s growth during the sixth month.</string>
    <string name="dryfruits">Dry fruits</string>
    <string name="blueberries">Blue berries</string>
    <string name="capsicum">Capsicum</string>
    <string name="memtxt">Want to be a member ?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_app">New to App?</string>
    <string name="signup">Back to Signup</string>
    <string name="Login">Login</string>
    <string name="extramobile_number">Another Mobile number</string>
    <string name="enter_Hospital_name">Enter hospital name</string>
    <string name="hospitaladdress">Enter hospital address</string>
    <string name="hospitalid">Hospital ID</string>
</resources>