<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    tools:ignore="MissingDefaultResource">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/img3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/line1"
            android:textColor="@color/textcolor"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:lines="3"
            android:maxLines="3"
            android:text="Our comprehensive range of services and top-notch medication ensure your well-being is our top priority."
            android:textColor="#F8F7F8"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:background="@drawable/radiusbtn"
                android:elevation="10dp"
                android:text="@string/skip"
                android:textStyle="bold"
                android:textColor="@color/textcolor"
                tools:ignore="RtlHardcoded"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:background="@drawable/radiusbtn"
                android:elevation="10dp"
                android:text="@string/next"
                android:textStyle="bold"
                android:textColor="@color/textcolor"
                tools:ignore="RtlHardcoded"
                style="?android:attr/buttonBarButtonStyle"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/textcolor"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/memtxt" />
            <TextView
                android:id="@+id/click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/click_here"
                android:textFontWeight="40"/>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>